platform-tools/efk-logging/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elasticsearch-policy
  namespace: logging
spec:
  podSelector:
    matchLabels:
      app: elasticsearch-master
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: fluent-bit
      ports:
        - protocol: TCP
          port: 9200
    - from:
        - podSelector:
            matchLabels:
              app: kibana
      ports:
        - protocol: TCP
          port: 9200
    - from:
        - podSelector:
            matchLabels:
              app: elasticsearch-master
      ports:
        - protocol: TCP
          port: 9200
        - protocol: TCP
          port: 9300
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app: elasticsearch-master
      ports:
        - protocol: TCP
          port: 9300
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kibana-policy
  namespace: logging
spec:
  podSelector:
    matchLabels:
      app: kibana
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 5601
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app: elasticsearch-master
      ports:
        - protocol: TCP
          port: 9200
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fluentbit-policy
  namespace: logging
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: fluent-bit
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app: elasticsearch-master
      ports:
        - protocol: TCP
          port: 9200
    - ports:
        - protocol: TCP
          port: 443
